[workspace]
resolver = "2"
members = ["cargo-near", "cargo-near-build", "integration-tests"]

[profile.slim]
inherits = "release"
lto = true
strip = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# A prefix git tags must include for dist to care about them
tag-namespace = "cargo-near-v"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Publish jobs to run in CI
publish-jobs = ["npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "aarch64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Which actions to run on pull requests
pr-run-mode = "upload"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.github-custom-runners]
# Linux builds on WarpBuild runners
aarch64-unknown-linux-gnu = "warp-ubuntu-2404-arm64-4x"
x86_64-unknown-linux-gnu = "warp-ubuntu-2204-x64-4x"
# Cross-compile Windows from Linux using cargo-xwin (much faster than native Windows builds)
x86_64-pc-windows-msvc = { runner = "warp-ubuntu-2404-x64-4x", container = "messense/cargo-xwin" }
aarch64-pc-windows-msvc = { runner = "warp-ubuntu-2404-x64-4x", container = "messense/cargo-xwin" }

[workspace.metadata.dist.dependencies.apt]
libudev-dev = { version = "*", targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
] }


# [patch.'https://github.com/dj8yfo/near-verify-rs.git']
# near-verify-rs = { version = "0.1.0", path = "../../../../near-verify-rs-worktrees/near-verify-rs/" }
