[package]
name = "cargo-near-build"
edition = "2021"
version = "0.1.0"

[dependencies]
eyre = "0.6.12"
camino = "1.1.1"
colored = "2.0"
dunce = "1"
log = "0.4"
bs58 = "0.5"
hex = "0.4.3"
sha2 = "0.10"
cargo_metadata = "0.18.1"
symbolic-debuginfo = "8.8"
libloading = "0.8.3"
serde_json = "1.0"
near-abi = { version = "0.4.0", features = ["__chunked-entries"] }
zstd = "0.13"
schemars = "0.8"
rustc_version = "0.4"
url = { version = "2.5.0", features = ["serde"], optional = true }
serde = { version = "1.0.197", optional = true }
git2 = { version = "0.19", optional = true }
home = { version = "0.5.9", optional = true }
pathdiff = { version = "0.2.1", features = ["camino"], optional = true }
unix_path = { version = "1.0.1", optional = true }
tempfile = { version = "3.10.1", optional = true }

[features]
default = []
docker = ["dep:url", "dep:serde", "dep:git2", "dep:home", "dep:pathdiff", "dep:unix_path", "dep:tempfile"]

