[package]
name = "cargo-near-build"
edition = "2021"
version = "0.4.5"
description = "Library for building Rust smart contracts on NEAR, basis of `cargo-near` crate/CLI"
repository = "https://github.com/near/cargo-near"
license = "MIT OR Apache-2.0"

[dependencies]
eyre = "0.6.12"
camino = "1.1.1"
colored = "2.0"
dunce = "1"
tracing = "0.1.40"
bs58 = "0.5"
hex = "0.4.3"
sha2 = "0.10"
cargo_metadata = "0.18.1"
symbolic-debuginfo = "8.8"
libloading = "0.8.3"
serde_json = "1.0"
near-abi = { version = "0.4.0", features = ["__chunked-entries"] }
zstd = "0.13"
schemars = "0.8"
rustc_version = "0.4"
bon = "2.3.0"
near-verify-rs = { version = "0.1.0", path = "../../../../../near-verify-rs-worktrees/near-verify-rs/", optional = true }
url = { version = "2.5.0", features = ["serde"], optional = true }
serde = { version = "1.0.197", optional = true }
git2 = { version = "0.19", optional = true }
home = { version = "0.5.9", optional = true }
pathdiff = { version = "0.2.1", features = ["camino"], optional = true }
unix_path = { version = "1.0.1", optional = true }
tempfile = { version = "3.10.1" }
wasm-opt = "=0.116.1"
humantime = "2.1.0"
indenter = "0.3"



[package.metadata.docs.rs]
features = ["build_script"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.dist]
dist = false

[features]
default = []
build_script = []
abi_build = []
docker = [
  "dep:near-verify-rs",
  "dep:url",
  "dep:serde",
  "dep:git2",
  "dep:home",
  "dep:pathdiff",
  "dep:unix_path",
]
test_code = []
