[package]
name = "cargo-near-build"
edition.workspace = true
rust-version = "1.86"
version = "0.11.1"
description = "Library for building Rust smart contracts on NEAR, basis of `cargo-near` crate/CLI"
repository = "https://github.com/near/cargo-near"
license = "MIT OR Apache-2.0"

[dependencies]
## deps of default features
eyre = "0.6.12"
camino = "1.1.1"
bs58 = "0.5"
hex = "0.4.3"
sha2 = "0.10"
dunce = "1"
bon = "3"
cargo_metadata = "0.21"
colored = "3"
tracing = "0.1.40"
indenter = "0.3"
pathdiff = { version = "0.2.1", features = ["camino"] }
# pinned this as `version_meta_with_override` relies on pretty specific api from `rustc_version`
rustc_version = { version = "=0.4.1" }

## deps of non-default features
# build_internal
symbolic-debuginfo = { version = "12", optional = true }
libloading = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
near-abi = { version = "0.4.0", features = [
    "__chunked-entries",
], optional = true }
zstd = { version = "0.13", optional = true }
schemars = { version = "0.8", optional = true }
near-verify-rs = { version = "0.3.0", optional = true }
tempfile = { version = "3.10.1", optional = true }
wasm-opt = { version = "=0.116.1", optional = true }
# docker
url = { version = "2.5.0", features = ["serde"], optional = true }
serde = { version = "1.0.197", optional = true }
git2 = { version = "0.20", optional = true }
unix_path = { version = "1.0.1", optional = true }
humantime = { version = "2.1.0", optional = true }
regex = { version = "1.11.1", optional = true }
# tracing_debug
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }


[package.metadata.docs.rs]
features = []
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.dist]
dist = false

[features]
default = ["build_external"]
build_external = []
build_internal = [
    "dep:symbolic-debuginfo",
    "dep:libloading",
    "dep:serde_json",
    "dep:near-abi",
    "dep:zstd",
    "dep:schemars",
    "dep:tempfile",
    "dep:wasm-opt",
    "dep:humantime",
]
docker = [
    "dep:near-verify-rs",
    "dep:serde_json",
    "dep:url",
    "dep:serde",
    "dep:git2",
    "dep:unix_path",
    "dep:tempfile",
    "dep:regex",
]
test_code = []
tracing_debug = ["dep:tracing-subscriber"]
