[package]
name = "cargo-near"
version = "0.13.3"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.81.0"
description = "Cargo extension for building Rust smart contracts on NEAR"
readme = "README.md"
repository = "https://github.com/near/cargo-near"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "near", "contract", "abi", "build"]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::build-utils",
    "command-line-utilities",
]

[package.metadata.wix]
upgrade-guid = "FFBAE83D-C3FA-45DD-9F19-C8F312E905C5"
path-guid = "4A9FB601-2F10-48F8-BBC0-B467169D6BAD"
license = false
eula = false

[dependencies]
cargo-near-build = { version = "0.4.3", path = "../cargo-near-build", features = [
    "abi_build",
    "docker",
] }
clap = { version = "4.0.18", features = ["derive", "env"] }
colored = "2.0"
serde = "1.0.197"
color-eyre = "0.6"
inquire = "0.7"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
names = { version = "0.14.0", default-features = false }
derive_more = "0.99.9"
shell-words = "1.0.0"
interactive-clap = "0.3.2"
near-cli-rs = { version = "0.18.0", default-features = false }
reqwest = "0.12.5"
indicatif = "0.17.8"
indenter = "0.3"
tracing-core = "0.1.32"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
] }
serde_json = "1.0.128"
base64 = "0.22.1"

[dev-dependencies]
tracing-test = "0.2.5"


[features]
default = ["ledger"]
ledger = ["near-cli-rs/ledger"]
