[package]
name = "cargo-near-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
const_format = "0.2"
color-eyre = "0.6"
cargo-near-build = { version = "0.9.0", path = "../cargo-near-build" }
cargo-near = { path = "../cargo-near" }
tracing = "0.1.40"
prettyplease = "0.2"
syn = "2"

[dev-dependencies]
borsh = { version = "1.0.0", features = ["derive", "unstable__schema"] }
camino = "1.1.1"
cargo-near-build = { version = "0.9.0", path = "../cargo-near-build", features = [
    "test_code",
] }
near-api = "0.8"
near-sandbox = "0.3"
near-workspaces = "0.22"
chrono = "0.4"
function_name = "0.3"
git2 = "0.19"
minifier = "0.3"
schemars = "0.8"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tokio = { version = "1.12.0", features = ["full"] }
quote = "1.0"
zstd = "0.13"
toml = "0.8.19"
testresult = "0.4"
