[package]
name = "matrix-fixture-alpha"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.28"

# Opts this crate into `cargo near build list`. Default variant only.
[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm"]
