[package]
name = "cargo-near-new-project"
description = "New NEAR Protocol smart contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs" }
serde_json = "1.0.108"

[dev-dependencies]
near-workspaces = { version = "0.9.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
